(library
  (name utils)
  (modules utils)
  (libraries unix par_incr domainslib current_incr)
)

(library
  (name bench)
  (modules bench)
  (libraries unix)
)
(test
  (name incr_test)
  (modules incr_test)
  (libraries par_incr alcotest domainslib)
)
(test
  (name merge_sort)
  (modules merge_sort)
  (libraries par_incr utils bench )
)
(test
  (name sum_array)
  (modules sum_array)
  (libraries par_incr utils bench current_incr)
)
(test
  (name spellcheck)
  (modules spellcheck)
  (libraries par_incr utils bench current_incr)
)

(test
  (name filter)
  (modules filter)
  (libraries par_incr utils bench)
)
(test
  (name rabin_karp)
  (modules rabin_karp)
  (libraries par_incr utils bench current_incr)
)
